# cpp-template-redux

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  Dockerfile  ProjectOptions.cmake  README.md  gcovr.cfg
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Emscripten.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  VCEnvironment.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt
